--- a/src/markdown/help/faq.mdx
+++ b/src/markdown/help/faq.mdx
@@ -2,6 +2,7 @@
 date: "2019-02-05"
 title: "Frequently Asked Questions"
 description: "Frequently asked questions about Ledgy"
+thumbnailUrl: ""
 ---
 
 Welcome to Ledgy’s FAQ! Hit *command+F* to look for keywords to find your question. **Can’t find the answer to your question below?** [Let us know](/contact/)! We’ll get right back to you and might add your question here as well.
